[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
    "src/crane_fmu",
    "examples",
    "tests",
    ".coveragerc",
    ".editorconfig",
    ".pre-commit-config.yaml",
    "manage.py",
    "pyproject.toml",
    "pytest.ini",
    "ruff.toml",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/crane_fmu",
    "examples"
]

[tool.hatch.metadata]
allow-direct-references = true

[project]
    name = "crane-fmu"
    version = "0.2"
    description = "Basic crane simulation model including publication as FMU, for usage in the SEACo project"
    authors = [
        {name = "Siegfried Eisinger", email = "Siegfried.Eisinger@DNV.com"},
        {name = "Jorge Luis Mendez", email = "Jorge.Luis.Mendez@DNV.com"},
    ]
    readme = "README.rst"
    requires-python = ">=3.11"
    keywords = ["simulation", "model", "FMI", "OSP", "crane", "tight coupling"]
    license = {text = "MIT"}
    classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
    ]
    dependencies = [
        "component-model>=0.0.2",
        "pythonfmu>=0.7.0",
        "numpy>=2.0",
        "scipy>=1.15.1",
]
    #dynamic = ["version"]


[project.optional-dependencies]
    rest = ["docutils>=0.3"]
    test = ["FMPy>=0.3.21",
            "matplotlib>=3.10.7",
            "plotly>=6.0.1",
#            "libcosimpy >= 0.0.5",
    ]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.14.3",
    "pyright>=1.1.378",
    "mypy>=1.11.1",
    "sourcery>=1.22",
    "pre-commit>=3.8",
    "Sphinx>=8.0",
    "sphinx-argparse-cli>=1.17",
    "sphinx-autodoc-typehints>=2.2",
    "sphinxcontrib-mermaid>=1.0.0",
    "myst-parser>=4.0",
    "furo>=2024.8",
]

[tool.uv]
default-groups = [
    "dev",
]
native-tls = true
required-environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
    # "sys_platform == 'darwin'",
]

[project.scripts]
crane-fmu = "crane_fmu.cli.crane_fmu:main"

[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin",
]
mypy_path = "stubs"
files = [
    "src",
    "tests",
    "examples",
]
exclude = [
    "^src/folder_to_be_excluded/",
]
check_untyped_defs = true
disable_error_code = [
    "misc",
    "import-untyped",
]


[tool.pyright]
stubPath = "stubs"
include = [
    "src",
    "tests",
    "examples",
]
exclude = [
    "tests/test_working_directory",
]
